// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressTable should render 1`] = `
<DocumentFragment>
  <div
    class=" css-ycib48"
  >
    <div
      class="mx-auto px-8 md:px-10 lg:container"
    >
      <div
        data-testid="AddressTable"
      >
        <div
          class="flex items-center space-x-4 py-5"
        >
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex space-x-2"
          >
            <h2
              class="mb-0 text-lg font-bold"
            >
              ARK Devnet
            </h2>
            <span
              class="text-lg font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="-mt-3 css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-80 min-w-80"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      My Address
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden md:table-cell w-30 min-w-30"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Wallet Type
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden xl:table-cell w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Balance
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top ml-15"
                  >
                    <div
                      class=""
                    >
                      Delegate
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden lg:table-cell w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Rank
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                       
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class=" css-1li86da"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="font-bold space-x-4 css-14huxtf"
                  >
                    <div
                      class="shrink-0 shrink-0 css-tthe5h"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                    <div
                      class="w-40 flex-1"
                    >
                      <div
                        class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="css-u3jrna"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <span
                          class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden md:table-cell"
                >
                  <div
                    class="justify-center space-x-2 css-1d4ra48"
                  />
                </td>
                <td
                  class="hidden xl:table-cell"
                >
                  <div
                    class="justify-end font-bold text-theme-secondary-text whitespace-nowrap css-1d4ra48"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      33.75089801 DARK
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="font-bold space-x-4 css-1d4ra48"
                  >
                    <div
                      class="shrink-0 css-tthe5h"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                          title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        />
                      </div>
                    </div>
                    <span>
                      arkx
                    </span>
                  </div>
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="justify-center font-bold text-theme-secondary-text css-1d4ra48"
                  >
                    <span
                      class="text-theme-secondary-400"
                    >
                      N/A
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="justify-center css-1d4ra48"
                  >
                    <span>
                      <div
                        class="text-theme-danger-400 css-1i4b0eq"
                        data-testid="StatusIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          circle-cross.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="justify-end css-1hhowo0"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="AddressRow__select-0"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Vote
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render in xs screen 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-8cvvgy"
    >
      <div
        class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
        data-testid="AccordionHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="flex h-8 w-full flex-grow items-center space-x-3"
          >
            <div
              class="text-theme-secondary-700 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <div
              class="flex space-x-2"
            >
              <h2
                class="mb-0 text-lg font-bold"
              >
                ARK Devnet
              </h2>
              <span
                class="text-lg font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                1
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform rotate-180 css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
        data-testid="AddressAccordion"
      >
        <div
          class=" css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <tbody
              role="rowgroup"
            >
              <tr
                data-testid="AddressRowMobile"
              >
                <td
                  class="pt-3"
                >
                  <div
                    class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
                  >
                    <div
                      class="overflow-hidden border-b border-theme-secondary-300 py-4 px-6 dark:border-theme-secondary-800"
                    >
                      <div
                        class="flex items-center justify-start space-x-3 overflow-hidden"
                      >
                        <div
                          class="shrink-0 shrink-0 css-jxpwdn"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                        <div
                          class="flex w-0 flex-1 overflow-hidden"
                        >
                          <div
                            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="css-u3jrna"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex"
                    >
                      <div
                        class="flex w-full flex-col bg-theme-secondary-100 py-4 px-6 dark:bg-black"
                      >
                        <span
                          class="text-theme-secondary-500"
                        >
                          Voting for
                        </span>
                        <div
                          class="flex flex-grow items-center space-x-2 overflow-hidden"
                        >
                          <div
                            class="shrink-0 css-jxpwdn"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <div
                            class="flex items-center text-right"
                          >
                            <div
                              class="flex flex-1 justify-end overflow-hidden"
                            >
                              <span
                                class="overflow-hidden overflow-ellipsis whitespace-nowrap"
                              >
                                arkx
                              </span>
                            </div>
                          </div>
                          <div
                            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                            type="vertical"
                          />
                          <span>
                            <div
                              class="text-theme-danger-400 css-1i4b0eq"
                              data-testid="StatusIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                circle-cross.svg
                              </svg>
                            </div>
                          </span>
                        </div>
                      </div>
                      <button
                        class="p-6 rounded-none css-112fhi5"
                        data-testid="AddressRowMobile__select-0"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Vote
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render in xs screen when wallet network is live 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-8cvvgy"
    >
      <div
        class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
        data-testid="AccordionHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="flex h-8 w-full flex-grow items-center space-x-3"
          >
            <div
              class="text-theme-secondary-700 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <div
              class="flex space-x-2"
            >
              <h2
                class="mb-0 text-lg font-bold"
              >
                ARK Devnet
              </h2>
              <span
                class="text-lg font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                1
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform rotate-180 css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
        data-testid="AddressAccordion"
      >
        <div
          class=" css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <tbody
              role="rowgroup"
            >
              <tr
                data-testid="AddressRowMobile"
              >
                <td
                  class="pt-3"
                >
                  <div
                    class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
                  >
                    <div
                      class="overflow-hidden border-b border-theme-secondary-300 py-4 px-6 dark:border-theme-secondary-800"
                    >
                      <div
                        class="flex items-center justify-start space-x-3 overflow-hidden"
                      >
                        <div
                          class="shrink-0 shrink-0 css-jxpwdn"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                        <div
                          class="flex w-0 flex-1 overflow-hidden"
                        >
                          <div
                            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="css-u3jrna"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex"
                    >
                      <div
                        class="flex w-full flex-col bg-theme-secondary-100 py-4 px-6 dark:bg-black"
                      >
                        <span
                          class="text-theme-secondary-500"
                        >
                          Voting for
                        </span>
                        <div
                          class="flex flex-grow items-center space-x-2 overflow-hidden"
                        >
                          <div
                            class="shrink-0 css-jxpwdn"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <div
                            class="flex items-center text-right"
                          >
                            <div
                              class="flex flex-1 justify-end overflow-hidden"
                            >
                              <span
                                class="overflow-hidden overflow-ellipsis whitespace-nowrap"
                              >
                                arkx
                              </span>
                            </div>
                          </div>
                          <div
                            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                            type="vertical"
                          />
                          <span>
                            <div
                              class="text-theme-danger-400 css-1i4b0eq"
                              data-testid="StatusIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                circle-cross.svg
                              </svg>
                            </div>
                          </span>
                        </div>
                      </div>
                      <button
                        class="p-6 rounded-none css-112fhi5"
                        data-testid="AddressRowMobile__select-0"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Vote
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render in xs screen when wallet network is live 2`] = `
<DocumentFragment>
  <div>
    <div
      class="css-8cvvgy"
    >
      <div
        class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
        data-testid="AccordionHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="flex h-8 w-full flex-grow items-center space-x-3"
          >
            <div
              class="text-theme-secondary-700 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <div
              class="flex space-x-2"
            >
              <h2
                class="mb-0 text-lg font-bold"
              >
                ARK Devnet
              </h2>
              <span
                class="text-lg font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                1
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform rotate-180 css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
        data-testid="AddressAccordion"
      >
        <div
          class=" css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <tbody
              role="rowgroup"
            >
              <tr
                data-testid="AddressRowMobile"
              >
                <td
                  class="pt-3"
                >
                  <div
                    class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
                  >
                    <div
                      class="overflow-hidden border-b border-theme-secondary-300 py-4 px-6 dark:border-theme-secondary-800"
                    >
                      <div
                        class="flex items-center justify-start space-x-3 overflow-hidden"
                      >
                        <div
                          class="shrink-0 shrink-0 css-jxpwdn"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                        <div
                          class="flex w-0 flex-1 overflow-hidden"
                        >
                          <div
                            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="css-u3jrna"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex"
                    >
                      <div
                        class="flex w-full flex-col bg-theme-secondary-100 py-4 px-6 dark:bg-black"
                      >
                        <span
                          class="text-theme-secondary-500"
                        >
                          Voting for
                        </span>
                        <div
                          class="flex flex-grow items-center space-x-2 overflow-hidden"
                        >
                          <div
                            class="shrink-0 css-jxpwdn"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <div
                            class="flex items-center text-right"
                          >
                            <div
                              class="flex flex-1 justify-end overflow-hidden"
                            >
                              <span
                                class="overflow-hidden overflow-ellipsis whitespace-nowrap"
                              >
                                arkx
                              </span>
                            </div>
                          </div>
                          <div
                            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                            type="vertical"
                          />
                          <span>
                            <div
                              class="text-theme-danger-400 css-1i4b0eq"
                              data-testid="StatusIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                circle-cross.svg
                              </svg>
                            </div>
                          </span>
                        </div>
                      </div>
                      <button
                        class="p-6 rounded-none css-112fhi5"
                        data-testid="AddressRowMobile__select-0"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Vote
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <div
    class=" css-ycib48"
  >
    <div
      class="mx-auto px-8 md:px-10 lg:container"
    >
      <div
        data-testid="AddressTable"
      >
        <div
          class="flex items-center space-x-4 py-5"
        >
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex space-x-2"
          >
            <h2
              class="mb-0 text-lg font-bold"
            >
              ARK Devnet
            </h2>
            <span
              class="text-lg font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="-mt-3 css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-80 min-w-80"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      My Address
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden md:table-cell w-30 min-w-30"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Wallet Type
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden xl:table-cell w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Balance
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      Delegates
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Votes
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                       
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class=" css-1li86da"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="font-bold space-x-4 css-14huxtf"
                  >
                    <div
                      class="shrink-0 shrink-0 css-tthe5h"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                    <div
                      class="w-40 flex-1"
                    >
                      <div
                        class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="css-u3jrna"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <span
                          class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden md:table-cell"
                >
                  <div
                    class="justify-center space-x-2 css-1d4ra48"
                  />
                </td>
                <td
                  class="hidden xl:table-cell"
                >
                  <div
                    class="justify-end font-bold text-theme-secondary-text whitespace-nowrap css-1d4ra48"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      33.75089801 DARK
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="font-bold space-x-4 css-1d4ra48"
                  >
                    <div
                      class="flex items-center -space-x-2"
                    >
                      <span
                        class="flex"
                      >
                        <div
                          class="shrink-0 css-8d0u1i"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                          >
                            <img
                              alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                              title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            />
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="justify-center css-1d4ra48"
                  >
                    <div
                      class="font-bold text-theme-secondary-400"
                    >
                      <span
                        class="text-theme-secondary-text"
                      >
                        1
                      </span>
                      <span>
                        /10
                      </span>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="justify-end css-1hhowo0"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="AddressRow__select-0"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Vote
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render with voting delegates and handle exception 1`] = `
<DocumentFragment>
  <div
    class=" css-ycib48"
  >
    <div
      class="mx-auto px-8 md:px-10 lg:container"
    >
      <div
        data-testid="AddressTable"
      >
        <div
          class="flex items-center space-x-4 py-5"
        >
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex space-x-2"
          >
            <h2
              class="mb-0 text-lg font-bold"
            >
              ARK Devnet
            </h2>
            <span
              class="text-lg font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="-mt-3 css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-80 min-w-80"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      My Address
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden md:table-cell w-30 min-w-30"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Wallet Type
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden xl:table-cell w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Balance
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top ml-15"
                  >
                    <div
                      class=""
                    >
                      Delegate
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg>
                          chevron-down-small.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden lg:table-cell w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Rank
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                       
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class=" css-1li86da"
                data-testid="TableRow"
              >
                <td>
                  <div
                    class="font-bold space-x-4 css-14huxtf"
                  >
                    <div
                      class="shrink-0 shrink-0 css-tthe5h"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                    <div
                      class="w-40 flex-1"
                    >
                      <div
                        class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="css-u3jrna"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <span
                          class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden md:table-cell"
                >
                  <div
                    class="justify-center space-x-2 css-1d4ra48"
                  />
                </td>
                <td
                  class="hidden xl:table-cell"
                >
                  <div
                    class="justify-end font-bold text-theme-secondary-text whitespace-nowrap css-1d4ra48"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      33.75089801 DARK
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="font-bold space-x-4 css-1d4ra48"
                  >
                    <div
                      class="border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-aozgpb"
                    />
                    <span
                      class="text-theme-secondary-400"
                    >
                      N/A
                    </span>
                  </div>
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="justify-center font-bold text-theme-secondary-text css-1d4ra48"
                  />
                </td>
                <td>
                  <div
                    class="justify-center css-1d4ra48"
                  />
                </td>
                <td>
                  <div
                    class="justify-end css-1hhowo0"
                  >
                    <button
                      class="css-1jhy6v9"
                      data-testid="AddressRow__select-0"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Vote
                      </div>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
